<resources>
    <string name="app_name">PopularMovies</string>
    <string name="settingData">com.example.mine.popularmovies.settings</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="favorite">Favorite</string>
    <string name="language">Language: </string>
    <string name="family">Family Movie</string>
    <string name="adult">Adult Movie</string>
    <string name="release_date">Release Date: </string>
    <string name="vote_count">Vote Count: </string>
    <string name="MoviePoster">Movie Poster</string>

</resources>
