<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:showAsAction="ifRoom"
    android:id="@+id/categories">
    <item
        android:id="@+id/popular"
        android:title="@string/popular"
        android:orderInCategory="1"
        android:checkable="true"
        />
    <item
        android:id="@+id/top_rated"
        android:title="@string/top_rated"
        android:orderInCategory="2"
        android:checkable="true"
        />
    <item
        android:id="@+id/upcoming"
        android:title="@string/upcoming"
        android:orderInCategory="3"
        android:checkable="true"
        />
    <item
        android:id="@+id/now_playing"
        android:title="@string/now_playing"
        android:orderInCategory="4"
        android:checkable="true"
        />
    <item
        android:id="@+id/favorite"
        android:title="@string/favorite"
        android:orderInCategory="5"
        android:checkable="true"
        />




</menu>